Adding k8s to get pods
